Added descriptive stats

--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -35,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ChrisBarsolai/turdus-maximus/blob/main/Computer_Vision.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/deelilah/turdus-maximus/blob/main/Computer_Vision.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -647,6 +647,18 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZI2jM6qk2-J3"
+      },
+      "source": [
+        "#data understanding\r\n",
+        "df.describe()"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
